@@ -124,6 +124,7 @@ Release 0.91.0 - Unreleased
                indicates to bypass default action (Ming Ma)
    HBASE-3963  Schedule all log-spliiting at startup all at once (mingjian)
    HBASE-3983  list command in shell seems broken
+   HBASE-3793  HBASE-3468 Broke checkAndPut with null value (Ming Ma)
 
   IMPROVEMENTS
    HBASE-3290  Max Compaction Size (Nicolas Spiegelberg via Stack)  
